--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -1,24 +1,49 @@
-# .gitlab-ci.yml
+# This file is a template, and might need editing before it works on your project.
+# This is a sample GitLab CI/CD configuration file that should run without any modifications.
+# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
+# it uses echo commands to simulate the pipeline execution.
+#
+# A pipeline is composed of independent jobs that run scripts, grouped into stages.
+# Stages run in sequential order, but jobs within stages run in parallel.
+#
+# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+#
+# You can copy and paste this template into a new `.gitlab-ci.yml` file.
+# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
+#
+# To contribute improvements to CI/CD templates, please follow the Development guide at:
+# https://docs.gitlab.com/ee/development/cicd/templates.html
+# This specific template is located at:
+# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-stages:
+stages: # List of stages for jobs, and their order of execution
   - build
   - test
   - deploy
 
-variables:
-  GITHUB_REPO: https://github.com/lchac/tfm-javascript # Your GitHub repository
-
-before_script:
-  - echo "Starting build..."
-
-build:
+build-job: # This job runs in the build stage, which runs first.
   stage: build
-  image: docker:latest
-  services:
-    - docker:dind
   script:
-    - echo "Cloning GitHub repository..."
-    - git clone $GITHUB_REPO .
-    - echo "Building Docker image..."
-    - ls -la
-# Change this to your default branch
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
+unit-test-job: # This job runs in the test stage.
+  stage: test # It only starts when the job in the build stage completes successfully.
+  script:
+    - echo "Running unit tests... This will take about 20 seconds."
+    - sleep 20
+    - echo "Code coverage is 90%"
+
+lint-test-job: # This job also runs in the test stage.
+  stage: test # It can run at the same time as unit-test-job (in parallel).
+  script:
+    - echo "Linting code... This will take about 10 seconds."
+    - sleep 10
+    - echo "No lint issues found."
+
+deploy-job: # This job runs in the deploy stage.
+  stage: deploy # It only runs when *both* jobs in the test stage complete successfully.
+  environment: production
+  script:
+    - echo "Deploying application..."
+    - echo "Application successfully deployed."
